Documented the whole code
