# internal/models/models.go
@@ -6,6 +6,7 @@ import (
 	"gorm.io/gorm"
 )
 
+// VehicleType represents the type of vehicle
 type VehicleType string
 
 const (
@@ -14,12 +15,14 @@ const (
 	BusTruck          VehicleType = "BusTruck"
 )
 
+// ParkingLot represents a parking lot in the system
 type ParkingLot struct {
 	gorm.Model
 	Name     string
 	Capacity map[VehicleType]int `gorm:"serializer:json"`
 }
 
+// Tariff represents the pricing structure for a specific vehicle type in a parking lot
 type Tariff struct {
 	gorm.Model
 	ParkingLotID     uint
@@ -31,6 +34,7 @@ type Tariff struct {
 	DailyRateHours   int
 }
 
+// ParkingEntry represents a vehicle's parking session
 type ParkingEntry struct {
 	gorm.Model
 	ParkingLotID uint
@@ -40,6 +44,7 @@ type ParkingEntry struct {
 	ExitTime     *time.Time
 }
 
+// Validate checks if the ParkingLot data is valid
 func (pl *ParkingLot) Validate() error {
 	if pl.Name == "" {
 		return errors.New("invalid input: name is empty")
@@ -50,6 +55,7 @@ func (pl *ParkingLot) Validate() error {
 	return nil
 }
 
+// Validate checks if the Tariff data is valid
 func (t *Tariff) Validate() error {
 	if t.ParkingLotID == 0 || t.BaseRate < 0 || t.HourlyRate < 0 || t.DailyRate < 0 || t.BaseHours < 0 || t.DailyRateHours < 0 {
 		return errors.New("invalid tariff input")
@@ -57,6 +63,7 @@ func (t *Tariff) Validate() error {
 	return nil
 }
 
+// Validate checks if the ParkingEntry data is valid
 func (pe *ParkingEntry) Validate() error {
 	if pe.ParkingLotID == 0 || pe.LicensePlate == "" {
 		return errors.New("invalid parking entry input")
@@ -64,6 +71,7 @@ func (pe *ParkingEntry) Validate() error {
 	return nil
 }
 
+// Receipt represents a parking receipt generated when a vehicle exits
 type Receipt struct {
 	gorm.Model
 	ParkingEntryID uint
